MSGCNTR-655 updated es_MX translation for the email that is sent with a password reset Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@104445 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es_MX.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es_MX.properties
@@ -8,7 +8,7 @@ cdfm_container_title=Crear mensaje
 cdfm_container_title_thread = Enviar un nuevo comentario 
 cdfm_flat_view = Mostrar el mensaje completo
 cdfm_thread_view = Mostrar solo el asunto
-cdfm_reply_thread= Responder al hilo
+cdfm_reply_thread= Responder al comentario
 cdfm_tool_bar_message=Crear mensaje de foro de discusi\u00F3n
 cdfm_your_message=Su mensaje
 cdfm_required=Los elementos obligatorios est\u00E1n marcados con
@@ -32,7 +32,7 @@ cdfm_button_bar_add_groups_users= A\u00F1adir individuos/grupos
 cdfm_button_bar_mark_as_read= Marcar como le\u00EDdo
 cdfm_button_bar_reply_to_msg = Contestar al mensaje
 cdfm_button_bar_reply_to_topic = Contestar al tema
-cdfm_button_bar_reply_to_thread = Contestar al hilo
+cdfm_button_bar_reply_to_thread = Contestar al comentario
 cdfm_button_bar_delete_msg = Borrar
 cdfm_button_bar_grade = Calificar
 cdfm_button_bar_post_revised_msg = Enviar mensaje revisado
@@ -83,7 +83,7 @@ cdfm_subject=Tema
 cdfm_grade_msg = Calificar mensaje privado
 cdfm_authoredby=Creado por
 cdfm_date=Fecha
-cdfm_thread=Hilo
+cdfm_thread=Comentario
 cdfm_collapse_expand_all=Expandir todo/Contraer todo
 cdfm_label=Etiqueta
 cdfm_other_actions = Mostrar/Ocultar acciones
@@ -98,8 +98,8 @@ cdfm_print=Imprimir
 cdfm_printer_friendly=Versi\u00F3n imprimible
 cdfm_next_topic=Tema siguente >
 cdfm_previous_topic= < Tema anterior
-cdfm_next_thread= Hilo siguiente >
-cdfm_previous_thread=< Hilo anterior
+cdfm_next_thread= Comentario siguiente >
+cdfm_previous_thread=< Comentario anterior
 cdfm_read_full_description=Leer descripci\u00F3n completa
 cdfm_hide_full_description=Ocultar descripci\u00F3n completa
 cdfm_access=Acceso
@@ -220,7 +220,7 @@ cdfm_cancel = Cancelar
 cdfm_prev_msg = < Mensaje anterior
 cdfm_next_msg = Mensaje siguiente
 cdfm_reply_tool_bar_message= Responder al mensaje de un foro
-cdfm_reply_thread_tool_bar_message = Responder un hilo de un foro
+cdfm_reply_thread_tool_bar_message = Responder un comentario de un foro
 cdfm_reply_title = T\u00EDtulo de la respuesta
 cdfm_reply_to_topic = Contestar el tema de un foro
 cdfm_lowercase_msg = mensaje
@@ -266,7 +266,7 @@ perm_none=Ningunos
 
 #messages view options
 msg_view_all=Todos los mensajes
-msg_view_threaded=Por hilo
+msg_view_threaded=Por comentario
 msg_view_expanded=----Expande todo
 msg_view_collapsed=----Contrae todo
 msg_view_unread=S\u00F3lo sin leer
@@ -283,7 +283,7 @@ msg_show_subject = S\u00F3lo asunto
 
 #messages organize options
 msg_organize = Organizar
-msg_organize_thread = Por hilos
+msg_organize_thread = Por comentarios
 msg_organize_date_asc = Fecha (ascendente)
 msg_organize_date_desc = Fecha (descendente)
 msg_organize_unread = Sin leer
@@ -523,9 +523,9 @@ pvt_to_cc=Cc
 default_forum={0} Foro
 default_topic=Discusi\u00F3n General 
 return_to_statistics= Volver a Estad\u00EDsticas para
-stat_display_in_thread=[mostrar el hilo]
+stat_display_in_thread=[mostrar el comentario]
 stat_forum_next_participant= Siguiente participante >
-stat_forum_prev_participant	< Participante anterior
+stat_forum_prev_participant < Participante anterior
 stat_show_all= Mostrar el texto completo para todos
 stat_sort_by_date=Ordenar por Fecha
 stat_sort_by_topic=Ordenar por Tema
@@ -537,8 +537,8 @@ all_participants_desc=Todos los participantes
 participants_group_desc=Grupo
 participants_role_desc=Rol
 t_preview=Previsualizar
-cdfm_forum_mark_read=Marcar Hilos Le\u00eddos
-cdfm_auto_mark_threads_read=Marcar Autom\u00e1ticamente Todos Los Mensajes en un Hilo como Le\u00eddos
+cdfm_forum_mark_read=Marcar Comentarios Le\u00eddos
+cdfm_auto_mark_threads_read=Marcar Autom\u00e1ticamente Todos Los Mensajes en un Comentario como Le\u00eddos
 cdfm_forum_moderated_flag= ( Moderado ) 
 cdfm_moderated=moderado
 cdfm_notmoderated=no moderado
@@ -557,7 +557,7 @@ perm_custom=que se pueden personalizar a continuaci\u00f3n:
 # Watch forums options
 watch=Notificaciones
 watch_forums_options=Consultar Opciones del Foro
-notify_for_all_postings=Notificarme por correo cada vez que se añade un nuevo mensaje
+notify_for_all_postings=Notificarme por correo cada vez que se aÒade un nuevo mensaje
 notify_for_postings_to_my_thread=Notificarme por correo cuando una lista de comentarios a la que he participado, reciba un nuevo mensaje
 notify_none=Sin notificaciones
 
@@ -609,7 +609,7 @@ pvt_back=Volver
 
 area_restricted_message=La plantilla se encuentra en modo de disponibilidad restringido
 forum_restricted_message=El foro se encuentra en modo de disponibilidad restringido
-topic_restricted_message=El hilo se encuentra en modo de disponibilidad restringido
+topic_restricted_message=El comentario se encuentra en modo de disponibilidad restringido
 
 cdfm_labels=Etiquetas
 cdfm_newflag=\u00A1Nuevo!
