MSGCNTR-635 - Update Spanish translation files with the new keys extracted from diff 2.8.x to 3.0.X
Applying translation to MSGCNTR-649

git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@104465 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -705,7 +705,7 @@ confirm_navigation=Todas las notas que no han sido guardadas se perder\u00E1n
 
 
 #hiddenGroups:
-hiddenGroups_hiddenGroups=Grupos ocultos
+hiddenGroups_hiddenGroups=Grupos ocultos en el campo A
 hiddenGroups_addGroup=A\u00F1adir grupo
 hiddenGroups_selectGroup=--Seleccionar grupo--
 hiddenGroups_remove=Borrar
