MSGCNTR-86 Permission level names are not internationalized Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@104709 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -388,6 +388,14 @@ perm_own=Own
 perm_all=All
 perm_none=None
 
+perm_level_owner=Owner
+perm_level_author=Author
+perm_level_nonediting_author=Nonediting Author
+perm_level_contributor=Contributor
+perm_level_reviewer=Reviewer
+perm_level_none=None
+perm_level_custom=Custom
+
 #messages view options
 msg_view_all=All Messages
 msg_view_threaded=Threaded
