MSGCNTR-635 - Update Spanish translation files with the new keys extracted from diff 2.8.x to 3.0.X
Applying translation to MSGCNTR-86

git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@104710 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -324,6 +324,13 @@ perm_choose_instruction_topic_more = Puede asignar un elemento del libro de cali
 perm_own=Propios
 perm_all=Todos
 perm_none=Ningunos
+perm_level_owner=Propietario
+perm_level_author=Autor
+perm_level_nonediting_author=Autor sin edici\u00F3n
+perm_level_contributor=Contribuyente
+perm_level_reviewer=Revisor
+perm_level_none=Ninguno
+perm_level_custom=Personalizado
 
 #messages view options
 msg_view_all=Todos los mensajes
