SAK-20720 - Update Spanish translation files
Wrong translation in private messages


git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@110255 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -421,7 +421,7 @@ pvt_saveset= Guarda configuraci\u00F3n
 pvt_detmsgreply= Detalle del correo interno
 pvt_send= Enviar
 pvt_send_as_private= Como mensaje
-pvt_send_as_email= a las direcciones de correo de los remitentes
+pvt_send_as_email= a las direcciones de correo de los destinatarios
 pvt_savedraft= Guarda vista preliminar
 pvt_compose1= Crear 
 pvt_pvtcompose= Crear un correo interno
