MSGCNTR-708 Options for controlling copying of messages to recipients' email addresses
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@111104 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -480,18 +480,24 @@ pvt_cancel = Cancel
 pvt_bktolist = Back to list
 pvt_delcon= Delete Confirmation ...
 pvt_delmsgs= Delete Message(s)
+pvt_personal_settings= Personal Settings
+pvt_site_settings= Site Settings
 pvt_actpvtmsg= Activate Messages
 pvt_actpvtmsg1= Activate Messages:
 pvt_autofor= Auto Forward Messages
 pvt_autofor1= Auto Forward Messages:
 pvt_emailfor= Email address for forwarding:
-pvt_sendemailout=Allow sending copies to recipients' email address(es):
+pvt_sendemailout=Sending copies to recipients' email address(es):
+pvt_sendemail_0=Do not allow sending copies
+pvt_sendemail_1=Give sender the option to send copies
+pvt_sendemail_2=Always send copies
 pvt_saveset= Save Settings
 pvt_detmsgreply= Detail Message
 pvt_send= Send 
 pvt_send_cc= Send Cc
 pvt_send_as_private=As Message
 pvt_send_as_email= Send a copy of this message to recipients' email address(es)
+pvt_send_as_email_always= A copy of this message will be sent to all recipients' email address(es)
 pvt_savedraft= Save Draft
 pvt_compose1= Compose 
 pvt_pvtcompose= Compose a Message
@@ -577,6 +583,7 @@ pvt_confirm_perm_msg_delete = Are you sure you want to permanently delete the fo
 pvt_select_msgs_to_delete = There are no messages selected for deletion. 
 pvt_select_reply_recipients_list = Please select a recipient for this reply message.
 pvt_select_msg_recipient = You must select a recipient before you may send this message.
+pvt_send_to_email_invalid = Please select an option for allowing email copies of messages.
 
 #sakai-reply all
 pvt_select_msg_recipient_replyall = You must select the reply all recipient before you may send this message.
