--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -755,3 +755,24 @@ hiddenGroups_hiddenGroups=Groups hidden in To field
 hiddenGroups_addGroup=Add Group
 hiddenGroups_selectGroup=--Select Group--
 hiddenGroups_remove=Remove
+
+participants_group_desc=Group
+participants_role_desc=Role
+
+
+cc_all=A copy of this message will be sent to each recipient's email address.
+
+# move thread
+move_thread=Move Thread(s)
+by_name= By Name:
+in_forum= In Forum:
+move_thread_info1= The following thread(s) will be moved from
+move_thread_info2= to the topic selected below.
+leave_reminder=Leave reminder about the move in the old topic
+filter_topics=Filter Topics
+topics=Topics
+showing=showing
+of=of
+move_button_text=Move Thread(s) to Selected Topic
+locked_topics_hidden=Locked topics will not show up as available options
+moved=moved
