SAK-22983 Updated Swedish Translations
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@117615 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_sv.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_sv.properties
@@ -218,7 +218,7 @@ cdfm_settings_instruction=Obligatoriska objekt \u00E4r markerade med
 cdfm_shortDescription=Kort beskrivning (max 255 tecken)
 cdfm_shortDescriptionCharsRem=%1 tecken kvar
 cdfm_short_desc_too_long=En kort beskrivning kan inte vara l\u00E4ngre \u00E4n 255 tecken.
-cdfm_state_inconsistent=Kunde inte fullf\u00F6lja beg\u00E4ran d\u00E5 det verkar som du anv\u00E4nder multipla flikar eller f\u00F6nster. St\u00E4ng alla webbl\u00E4sarf\u00F6nster och f\u00F6rs\u00F6k igen. Om du inte anv\u00E4nde multipla flikar/f\u00F6nster, kontakta Supporten.
+cdfm_state_inconsistent=Kunde inte fullf\u00F6lja beg\u00E4ran d\u00E5 det verkar som du anv\u00E4nder multipla flikar eller f\u00F6nster. St\u00E4ng alla webbl\u00E4sarf\u00F6nster och f\u00F6rs\u00F6k igen. Om du inte anv\u00E4nde multipla flikar/f\u00F6nster, kontakta Helpdesk.
 cdfm_statistic=Statistik
 cdfm_statistics=Statistik
 cdfm_subject=\u00C4mne
@@ -267,7 +267,7 @@ email.body.msgposted=Inl\u00E4gg postat den\:
 email.body.msgtitle=Titel p\u00E5 inl\u00E4gget\:
 email.body.redirect1=G\u00E5 till forum f\u00F6r
 email.fromAddress=no-reply@{0}
-email.fromName=Cambro
+email.fromName=Mondo
 email.subject=Nytt inl\u00E4gg postat till {0} av {1}
 img_unavail=/images/pictureUnavailable.jpg
 loading_wait=Laddar...
