MSGCNTR-784 Grading from Forums should respect the grade entry type setting in the Gradebook
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@121513 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -277,6 +277,7 @@ cdfm_no_message_mark_read=No message selected to mark as read. Please select a m
 cdfm_grade_successful=Grade submission successful.
 cdfm_grade_greater_than_zero=Please input a number greater than or equal to 0.
 cdfm_grade_decimal_warn=Please input number with 2 or fewer digits after decimal point.
+cdfm_grade_invalid_warn=Please enter a valid grade.
 cdfm_alert=Alert: 
 cdfm_drafts=Drafts
 cdfm_msg_pending_queue=Pending Messages
@@ -316,6 +317,8 @@ cdfm_from = From
 cdfm_subject = Subject
 cdfm_grade_msg = Grade Forum Message
 cdfm_grade_points = Grade (Points Only):
+cdfm_grade_percent = Grade:
+cdfm_grade_letter = Grade (Letter Grade):
 cdfm_curr_score = Current score:
 cdfm_assignments = Gradebook Items:
 cdfm_select_assign = Select a gradebook item
