--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -335,6 +335,8 @@ cdfm_reply_title=Reply Title
 cdfm_reply_to_topic = Reply to Forum Topic
 cdfm_lowercase_msg = message
 cdfm_lowercase_msgs = messages
+cdfm_lowercase_unread_msg = unread 
+cdfm_of = of
 cdfm_unread = unread
 cdfm_openb = (
 cdfm_closeb = )
