MSGCNTR-620 Identify site members by special rank (e.g., by role) or by post count
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@122487 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -754,3 +754,31 @@ hiddenGroups_hiddenGroups=Groups hidden in To field
 hiddenGroups_addGroup=Add Group
 hiddenGroups_selectGroup=--Select Group--
 hiddenGroups_remove=Remove
+
+ranks=Ranks
+ranks_desc=Use ranks to identify people based on their post count or to denote certain individuals, such as the teaching staff within a class.
+add_rank=Add Rank
+edit_rank=Edit Rank
+add_new_rank=Add New Rank
+insufficient_privileges_ranks=Insufficient privileges to edit Ranks
+no_ranks_defined=There are no ranks to display
+rank_title=Rank Name
+rank_assign=Rank Type
+rank_image=Rank Image
+rank_based_on_individual=Special rank assigned to selected site member(s)
+rank_based_post_count=Rank based on post count threshold
+add_image=Add Image...
+assigned_to=Assigned to
+min_posts=Minimum Posts
+delete_rank=Delete Rank(s)
+delete_info=You are about to delete the following rank(s).  Are you sure you want to do this?
+openLinkNewWindow=Open New Window
+addrank_note=A site member can only have one rank at a time. Special rank overrides rank based on number of posts.
+num_of_posts=Posts:
+imagesize_unit=KB
+add_validate=Please supply the missing information before the rank can be created.
+edit_validate=Please supply the missing information before the rank can be applied.
+optional=(optional)
+image_size_info=Display of rank image is constrained to 35 x 35 pixels. Please optimize your image to be less than 100KB.
+image_size_err=Your image is too large for the 35 x 35 pixel display space. Please optimize your image to be less than 100KB.
+rank_assign_err=Select Rank Type
