MSGCNTR-805 fr_FR CLE 2.9 translation update
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@122957 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/permissions_fr_FR.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/permissions_fr_FR.properties
@@ -1,4 +1,28 @@
-desc-msg.permissions.allowToField.groups=Autorisez les groupes dans le champ \u00ab\u00c0\u00bb
-desc-msg.permissions.allowToField.allParticipants=Activez l'option \u00abTous les participants\u00bb dans le champ \u00ab\u00c0\u00bb
-desc-msg.permissions.allowToField.roles=Autorisez les r\u00f4les dans le champ \u00ab\u00c0\u00bb
-desc-msg.permissions.viewHidden.groups=Afficher les groupes masqu\u00e9s dans le champ \u00ab\u00c0\u00bb
+# Copyright (C) 2013 The Sakai Foundation
+#
+# Licensed under the Educational Community License, Version 2.0 (the "License"); 
+# you may not use this file except in compliance with the License. 
+# You may obtain a copy of the License at 
+# 
+# http://www.opensource.org/licenses/ecl2.php 
+# 
+# Unless required by applicable law or agreed to in writing, software 
+# distributed under the License is distributed on an "AS IS" BASIS, 
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
+# See the License for the specific language governing permissions and 
+# limitations under the License.
+# 
+# Contact:
+# Jean-Fran\u00E7ois L\u00E9v\u00EAque (Universit\u00E9 Pierre et Marie Curie, jean-francois.leveque@upmc.fr)
+# 
+# Translators:
+# Universit\u00E9 du Littoral C\u00F4te d'Opale
+# Universit\u00E9 Pierre et Marie Curie
+#
+# Validation:
+# Universit\u00E9 du Littoral C\u00F4te d'Opale
+# Universit\u00E9 Pierre et Marie Curie
+desc-msg.permissions.allowToField.groups=Autoriser les groupes dans le champ "Pour"
+desc-msg.permissions.allowToField.allParticipants=Autoriser l'option 'A tous les participants' dans le champ "Pour"
+desc-msg.permissions.allowToField.roles=Autoriser l'usage des r\u00f4les dans le champ "Pour"
+desc-msg.permissions.viewHidden.groups=Visualiser les groupes cach\u00e9s dans le champ "Pour"
