MSGCNTR-806 Link color is set in javascript Applied fix from IU
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@124959 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -446,6 +446,7 @@ sort_to=Sort by recipients
 sort_date=Sort by date
 sort_label=Sort by label
 sort_attachment=Sort by attachment
+sort_thread=Sort by conversation
 
 
 #private messages
