MSGCNTR-814 Add sender's email address to message body
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@124960 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -576,6 +576,15 @@ pvt_forward_prefix = FW:
 #SAKAI-huxt
 pvt_replyall_prefix = Re:
 
+#Sender and recipient info included in email text
+# the display of the username is controlled via a property
+# {0} - recipients
+pvt_email_to = To: {0}
+# {0} - sender's name, {1} - sender's email
+pvt_email_from = From: {0} - {1}
+# {0} - sender's name, {1} - sender's username, {2} - sender's email
+pvt_email_from_with_eid = From: {0} ({1}) - {2}
+
 pvt_alert = Alert:
 pvt_no_match_found = No matching result found
 pvt_missing_date_range = Please enter valid begin and end dates for search
