MSGCNTR-773 Hidden group name displays to students if instructor emails the group
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@129580 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -521,6 +521,7 @@ pvt_addBcc=Add Bcc
 pvt_bccClear=Clear Selection
 pvt_bccUndisclosed=Undisclosed-Recipients
 pvt_HiddenRecipients=Undisclosed Recipients
+pvt_hiddenGroupsBccMsg=To send a message to a hidden group, you must select the group as a Bcc recipient.
 #reply all
 pvt_to_cc= Cc
 pvt_replyto= Replying To
