MSGCNTR-241 Ability to move a thread to a different topic
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@129691 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -773,6 +773,23 @@ hiddenGroups_addGroup=Add Group
 hiddenGroups_selectGroup=--Select Group--
 hiddenGroups_remove=Remove
 
+#MSGCNTR-241
+move_thread=Move Thread(s)
+by_name= By Name:
+in_forum= In Forum:
+move_thread_info1= The following thread(s) will be moved from
+move_thread_info2= to the topic selected below.
+leave_reminder=Leave reminder about the move in the old topic
+filter_topics=Filter Topics
+topics=Topics
+showing=showing
+of=of
+move_button_text=Move Thread(s) to Selected Topic
+locked_topics_hidden=Locked topics will not show up as available options
+hasBeen=has been
+moved=moved
+anotherTopic=to another topic.
+
 ranks=Ranks
 ranks_desc=Use ranks to identify people based on their post count or to denote certain individuals, such as the teaching staff within a class.
 add_rank=Add Rank
