MSGCNTR-831 Forums - Please use consistent case for "View Full Description and Attachments"
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@129980 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -184,7 +184,7 @@ cdfm_profile_information=Profile Information
 cdfm_view=View 
 cdfm_hide=Hide 
 cdfm_and= and 
-cdfm_attach=attachments
+cdfm_attach=Attachment(s)
 cdfm_no_topics=There are no topics posted in this forum. 
 cdfm_no_messages=There are no messages posted. 
 cdfm_no_unread_messages= There are no unread messages.
