MSGCNTR-830 Mark replied messages on the "Received" folder.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@130099 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -512,6 +512,9 @@ pvt_email_footer2=", desde el sitio
 pvt_email_footer3=.
 pvt_email_footer4=Para responder a este mensaje pulse en este v\u00EDnculo y acceder\u00E1 a Mensajer\u00EDa Interna:
 
+pvt_msgs_replied=Mensajes respondidos
+pvt_replied=Respondido
+
 syn_mark_as_read= Marcar como le\u00EDdo
 syn_site_heading=Sitio
 syn_private_heading=Mensajes
