--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -642,6 +642,9 @@ pvt_email_footer2=Messages from the
 pvt_email_footer3=site.
 pvt_email_footer4=To reply to this message click this link to access Messages for this site:
 
+pvt_msgs_replied=Replied messages
+pvt_replied=Already replied
+
 syn_anon=No unread message counts as you aren't logged in.
 syn_mark_as_read=Mark all as read
 syn_site_heading=Site
