SAK-25257 Including when a private message has been sent to receivers email addresses. Patch from Raul
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@134305 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -504,6 +504,7 @@ pvt_send= Send
 pvt_send_cc= Send Cc
 pvt_send_as_private=As Message
 pvt_send_as_email= Send a copy of this message to recipients' email address(es)
+pvt_sent_as_email= sent with copy to email address 
 pvt_send_as_email_always= A copy of this message will be sent to all recipients' email address(es)
 pvt_savedraft= Save Draft
 pvt_compose1= Compose 
