--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
@@ -1094,6 +1094,8 @@ pvt_send = Envia
 
 pvt_send_as_email = Envia una c\u00F2pia a l'(les) adre\u00E7a(ces) electr\u00F2nica(ques) dels destinataris
 
+pvt_sent_as_email = enviat amb copia a correu  electr\u00F2nic
+
 pvt_send_as_email_always = Una c\u00F2pia d'aquest missatge s'enviar\u00E0 a totes les adreces de correu electr\u00F2nic dels destinataris
 
 pvt_send_as_private = Com a missatges privats
