--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es_ES.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es_ES.properties
@@ -501,6 +501,7 @@ pvt_send=Enviar
 pvt_send_cc=Enviar como copia
 pvt_send_as_private=Como mensaje
 pvt_send_as_email=Enviar una copia de este mensaje a las direcciones de correo de los destinatarios
+pvt_send_as_email=enviado con copia al correo electrónico
 pvt_send_as_email_always=Una copia de este mensaje ser\u00e1 enviada a la direcci\u00f3n de correo electr\u00f3nico de todos los destinatarios
 pvt_savedraft=Guardar borrador
 pvt_compose1=Redactar 
