SAK-25798 Change all occurrences of 'Thread(s)' to 'Conversation(s)'
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@306597 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -404,7 +404,7 @@ perm_level_custom=Custom
 
 #messages view options
 msg_view_all=All Messages
-msg_view_threaded=Threaded
+msg_view_threaded=Conversations
 msg_view_expanded=----Expand All
 msg_view_collapsed=----Collapse All
 msg_view_unread=Unread Only
@@ -675,7 +675,7 @@ syn_move_inst=Move Selected
 syn_remove_inst=Remove Selected
 syn_move_all_inst=Move All
 syn_remove_all_inst=Remove All
-syn_no_new_messages=There are no new messages or forum threads posted.
+syn_no_new_messages=There are no new messages or forum conversations posted.
 syn_no_site_selected=Alert: You must select a site to move or pick a site from the proper column.
 
 syn_goto_mc=Go to Message & Forums
@@ -778,17 +778,17 @@ hiddenGroups_selectGroup=--Select Group--
 hiddenGroups_remove=Remove
 
 #MSGCNTR-241
-move_thread=Move Thread(s)
+move_thread=Move Conversation(s)
 by_name= By Name:
 in_forum= In Forum:
-move_thread_info1= The following thread(s) will be moved from
+move_thread_info1= The following conversation(s) will be moved from
 move_thread_info2= to the topic selected below.
 leave_reminder=Leave reminder about the move in the old topic
 filter_topics=Filter Topics
 topics=Topics
 showing=showing
 of=of
-move_button_text=Move Thread(s) to Selected Topic
+move_button_text=Move Conversation(s) to Selected Topic
 locked_topics_hidden=Locked topics will not show up as available options
 hasBeen=has been
 moved=moved
