SAK-26023 - Update es_ES translations up to 100% (Crowdin - 2014)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@307678 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es_ES.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es_ES.properties
@@ -148,7 +148,6 @@ cdfm_template_setting=Configurar plantilla
 cdfm_default_template_settings=Configuraci\u00f3n de plantilla predeterminada
 cdfm_default_template_settings_instruction=La configuraci\u00f3n de esta plantilla se aplicar\u00e1 cada vez que se cree un nuevo foro o tema. Puede cambiar esta configuraci\u00f3n para un foro o tema espec\u00edficos despu\u00e9s de haberlos creado.
 cdfm_default_template_organize=Organizar foros y temas
-cdfm_default_template_organize_instruction=
 cdfm_checkall=Seleccionar todo
 cdfm_subject=Asunto
 cdfm_authoredby=Creado por
@@ -401,7 +400,7 @@ perm_level_custom=Personalizar
 
 #messages view options
 msg_view_all=Todos los mensajes
-msg_view_threaded=Por conversaci\u00f3n
+msg_view_threaded=Conversaciones
 msg_view_expanded=----Expandir todo
 msg_view_collapsed=----Contraer todo
 msg_view_unread=Solo sin leer
@@ -501,7 +500,7 @@ pvt_send=Enviar
 pvt_send_cc=Enviar como copia
 pvt_send_as_private=Como mensaje
 pvt_send_as_email=Enviar una copia de este mensaje a las direcciones de correo de los destinatarios
-pvt_send_as_email=enviado con copia al correo electrónico
+pvt_sent_as_email=enviada copia a correos de destinatarios 
 pvt_send_as_email_always=Una copia de este mensaje ser\u00e1 enviada a la direcci\u00f3n de correo electr\u00f3nico de todos los destinatarios
 pvt_savedraft=Guardar borrador
 pvt_compose1=Redactar 
@@ -526,7 +525,6 @@ pvt_replyto=Respondiendo a
 pvt_from=Desde
 pvt_openb=(
 pvt_closeb=)
-pvt_colon\ \=\ \:=
 pvt_mainpgerror=El \u00e1rea de mensajes no est\u00e1 activada para este sitio. Para activarla para este sitio, haga clic en Configuraci\u00f3n en la barra del \u00e1rea de mensajes.
 pvt_hlprpgerror=La herramienta de mensajes no est\u00e1 activada para este sitio. Para activarla, haga clic en Configuraci\u00f3n.
 pvt_lowercase_msg=mensaje
@@ -672,7 +670,7 @@ syn_move_inst=Mover seleccionados
 syn_remove_inst=Borrar seleccionado
 syn_move_all_inst=Mover todo
 syn_remove_all_inst=Borrar todo
-syn_no_new_messages=No hay mensajes nuevos ni entradas publicadas en el foro.
+syn_no_new_messages=No hay nuevos mensajes o conversaciones del foro.
 syn_no_site_selected=Alerta\: debe seleccionar un sitio para mover o escoger un sitio de la columna adecuada.
 
 syn_goto_mc=Ir a Mensajes y foros
@@ -775,17 +773,17 @@ hiddenGroups_selectGroup=--Seleccionar grupo--
 hiddenGroups_remove=Borrar
 
 #MSGCNTR-241
-move_thread=Mover hilo(s)
+move_thread=Mover Conversaci\u00f3n(es)
 by_name=Por nombre\:
 in_forum=En el foro\:
-move_thread_info1=Los siguientes hilo(s) se mover\u00e1n desde
+move_thread_info1=Las siguientes conversaciones se mover\u00e1n desde
 move_thread_info2=el tema abajo seleccionado.
 leave_reminder=Dejar el recordatorio sobre el movimiento en el tema antiguo
 filter_topics=Filtrar temas
 topics=Temas
 showing=mostrando
 of=de
-move_button_text=Mover hilo(s) al tema seleccionado
+move_button_text=Mover Conversaciones al Tema Seleccionado
 locked_topics_hidden=Los temas bloqueados no se mostrar\u00e1n como opciones disponibles
 hasBeen=ha sido
 moved=movido
@@ -818,3 +816,4 @@ optional=(opcional)
 image_size_info=Las im\u00e1genes en las filas est\u00e1n limitadas a 35 x 35 p\u00edxeles. Por favor, optimice su imagen para que sea inferior a 100KB.
 image_size_err=Su imagen es demasiado grande para el espacio de 35 x 35 pixeles. Por favor reduzca su imagen para que ocupe menos de 100KB.
 rank_assign_err=Seleccione tipo de fila
+
