SAK-25743 - Fixed Crowdin bug (Crowdin - 2014) (Basque)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@308069 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_eu.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_eu.properties
@@ -258,9 +258,9 @@ cdfm_invalid_selected_forum=Aukeratutako foroa ez da balioduna
 cdfm_forum_not_found=Ez da aurkitu foro hori
 cdfm_failed_new_topic=Okerra gai berri bat sortzean\!
 cdfm_selected_forum_not_found=Ez da aurkitu aukeratutako foroa 
-cdfm_topic_with_id='' identifikatzailea duen gaia
-cdfm_message_with_id='' identifikatzailea duen mezua
-cdfm_not_found_quote=ez da aurkitu ''
+cdfm_topic_with_id=' identifikatzailea duen gaia
+cdfm_message_with_id=' identifikatzailea duen mezua
+cdfm_not_found_quote=ez da aurkitu '
 cdfm_parent_forum_not_found=Ez da aurkitu foro gurasorik
 cdfm_not_found_redirect_page=Ezin da aurkitu birbidaltzeko orria\: 
 cdfm_message_reference_not_found=Mezuaren erreferentzia ez da aurkitu mezu honetarako\:
@@ -547,7 +547,7 @@ pvt_priority_high=Handikoa
 pvt_select_addtl_recipients=Aukeratu hartzaile gehigarriak
 #SAKAI-10505
 pvt_select_forward_recipients=Aukeratu aurrerako hartzaileak
-pvt_time_format=MM/dd/yy ''ordua'' HH\:mm\:ss
+pvt_time_format=MM/dd/yy 'ordua' HH\:mm\:ss
 pvt_prev_msg=< Aurreko mezua
 pvt_next_msg=Hurrengo mezua >
 pvt_msgs_label=Mezuak - 
@@ -603,9 +603,9 @@ pvt_select_msg_recipient_replyall=Hartzaile guztiak hautatu behar dituzu mezu ha
 
 pvt_missing_subject=Gai bat aukeratu behar duzu mezu hau bidali baino lehenago.
 pvt_missing_subject_draft=Gai bat idatzi behar duzu mezu hau gorde aurretik.
-pvt_confirm_msg_delete=Ziur zaude mezu hau ezabatu nahi duzula? Hala bada, sakatu ''Ezabatu'' mezua ezabatzeko.
+pvt_confirm_msg_delete=Ziur zaude mezu hau ezabatu nahi duzula? Hala bada, sakatu 'Ezabatu' mezua ezabatzeko.
 pvt_enter_search_text=Sartu, arren, bilatzeko testua.
-pvt_no_message_mark_read=Ez duzu mezurik aukeratu ''irakurria'' markarekin markatzeko. Aukeratu, arren, mezu bat.
+pvt_no_message_mark_read=Ez duzu mezurik aukeratu 'irakurria' markarekin markatzeko. Aukeratu, arren, mezu bat.
 pvt_no_message_mark_delete=Ez duzu mezurik aukeratu ezabatzeko. Aukeratu, arren, mezu bat.
 pvt_no_message_mark_move=Ez duzu mezurik aukeratu beste karpeta batera aldatzeko. Aukeratu, arren, mezu bat.
 pvt_deleted_success=Aukeratu duzun mezua ongi aldatu da Ezabatua karpetara.
@@ -641,7 +641,7 @@ pvt_msgs_replied=Erantzunak dituzten mezuak
 pvt_replied=Erantzuna jadanik eman da
 
 syn_anon=Ez da irakurri gabeko mezu-kopururik, ez baituzu saioa ireki.
-syn_mark_as_read=Markatu denak ''irakurria'' seinalearekin
+syn_mark_as_read=Markatu denak 'irakurria' seinalearekin
 syn_site_heading=Gunea
 syn_private_heading=Mezuak
 syn_discussion_heading=Foroak
@@ -654,7 +654,7 @@ syn_options=Aukerak
 syn_change_submit=Eguneratu aukerak
 syn_update=Eguneratu
 syn_cancel=Utzi
-syn_directions=Mezua eta gune baten foro jakinarazpenak ezkutatzeko, aukeratu gunea ''Gunearen Jakinarazpenak Ikusgai'' dioen tokitik, eta erabili ezker gezia ''Gunearen Jakinarazpenak Ez daude Ikusgai'' dioen tokira aldatzeko. Mezua eta gune baten foro jakinarazpenak bistaratzeko, aukeratu gunea ''Gunearen Jakinarazpenak Ez daude Ikusgai''dioen tokitik, eta erabili eskuin gezia ''Gunearen Jakinarazpenak Ikusgai'' dioen tokira aldatzeko. Gero egin klik ''Eguneratu Aukerak'' dioen tokian, eta aldaketak egingo dira.
+syn_directions=Mezua eta gune baten foro jakinarazpenak ezkutatzeko, aukeratu gunea 'Gunearen Jakinarazpenak Ikusgai' dioen tokitik, eta erabili ezker gezia 'Gunearen Jakinarazpenak Ez daude Ikusgai' dioen tokira aldatzeko. Mezua eta gune baten foro jakinarazpenak bistaratzeko, aukeratu gunea 'Gunearen Jakinarazpenak Ez daude Ikusgai'dioen tokitik, eta erabili eskuin gezia 'Gunearen Jakinarazpenak Ikusgai' dioen tokira aldatzeko. Gero egin klik 'Eguneratu Aukerak' dioen tokian, eta aldaketak egingo dira.
 syn_site_not_vis=Gunearen Jakinarazpenak Ez daude Ikusgai
 syn_site_vis=Jakinarazpenak Ikusgai
 syn_hide=Ez erakutsi
@@ -671,7 +671,7 @@ syn_move_all_inst=Lekuz aldatu denak
 syn_remove_all_inst=Kendu denak
 syn_no_site_selected=Alerta\: gune bat aukeratu behar duzu gune bat lekuz aldatzeko edo aukeratzeko egokia den zutabetik.
 
-syn_goto_mc=Joan ''Mezua eta Foroak'' dioen tokira
+syn_goto_mc=Joan 'Mezua eta Foroak' dioen tokira
 syn_goto_messages=Joan mezuetara
 syn_goto_forums=Joan foroetara
 syn_goto_site=Joan gunera
@@ -685,7 +685,7 @@ close_window=Itxi leihoa
 ## Configuration properties should _not_ be mixed in with localization properties
 ## (the following should not be translated and ultimately moved into separate file)
 ##
-syn_tool_link_begin=<a href\="\#" onclick\="javascript\:window.parent.location.href\=''
+syn_tool_link_begin=<a href\="\#" onclick\="javascript\:window.parent.location.href\='
 longPageLoad=synMain
 longPageLoadLite=synMainLite
 viewSynopticInfo=Erakutsi mezu berriak eta foro bidalketak
