SAK-25599 Simplified Chinese translation for msgcntr, updated with ordered version.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@308331 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/permissions_zh_CN.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/permissions_zh_CN.properties
@@ -1,4 +1,4 @@
-desc-msg.permissions.allowToField.groups=\u5141\u8bb8\u5728\u201c\u53D1\u9001\u5230\u201d\u5b57\u6bb5\u4e2d\u51fa\u73b0\u7ec4
-desc-msg.permissions.allowToField.allParticipants=\u5141\u8bb8\u5728\u201c\u53D1\u9001\u5230\u201d\u5b57\u6bb5\u4e2d\u51fa\u73b0\u201c\u6240\u6709\u53c2\u4e0e\u8005\u201d\u9009\u9879
-desc-msg.permissions.allowToField.roles=\u5141\u8bb8\u5728\u201c\u53D1\u9001\u5230\u201d\u5b57\u6bb5\u4e2d\u51fa\u73b0\u89d2\u8272
-desc-msg.permissions.viewHidden.groups=\u67e5\u770b\u9690\u85cf\u7ec4
+desc-msg.permissions.allowToField.groups=\u5141\u8BB8\u5728\u201C\u53D1\u9001\u5230\u201D\u5B57\u6BB5\u4E2D\u51FA\u73B0\u7EC4
+desc-msg.permissions.allowToField.allParticipants=\u5141\u8BB8\u5728\u201C\u53D1\u9001\u5230\u201D\u5B57\u6BB5\u4E2D\u51FA\u73B0\u201C\u6240\u6709\u53C2\u4E0E\u8005\u201D\u9009\u9879
+desc-msg.permissions.allowToField.roles=\u5141\u8BB8\u5728\u201C\u53D1\u9001\u5230\u201D\u5B57\u6BB5\u4E2D\u51FA\u73B0\u89D2\u8272
+desc-msg.permissions.viewHidden.groups=\u67E5\u770B\u9690\u85CF\u7EC4
