SAK-26614 fix i18n issues in rank related pages. Patch from Gao Jun
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@310859 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -821,3 +821,24 @@ optional=(optional)
 image_size_info=Display of rank image is constrained to 35 x 35 pixels. Please optimize your image to be less than 100KB.
 image_size_err=Your image is too large for the 35 x 35 pixel display space. Please optimize your image to be less than 100KB.
 rank_assign_err=Select Rank Type
+rank_na=n/a
+rank_picker_click_add_individuals=Click <em style="font-weight: bolder;"> Add Individuals.</em>
+rank_picker_btn_add_individuals=Add Individuals...
+rank_threshold_hint=- Enter threshold number -
+rank_picker_assign_individuals=Assign Rank to Individuals
+rank_assign_filter_site_members=Filter Site Members...
+rank_assign_by_name=By Name:
+rank_assign_in_group=in Group/Section:
+rank_assign_all_groups=All Sections/Groups
+rank_assign_of_role=of role:
+rank_assign_all_roles=All Roles
+rank_assign_title_site_members=Site Members
+rank_assign_showing=showing
+rank_assign_of=of
+rank_assign_site_members=site members
+rank_assign_add_all=Add all
+rank_assign_individuals_to_assign=Individual(s) to be Assigned Rank
+rank_assign_remove_all=Remove all
+rank_assign_recipients_selected=recipients selected
+rank_assign_button_cancel=Cancel
+rank_assign_button_update=Update Individuals
