SAK-26619 fix i18n issues with move conversations pages. Patch form Gao Jun
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@310865 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -781,6 +781,13 @@ hiddenGroups_remove=Remove
 move_thread=Move Conversation(s)
 by_name= By Name:
 in_forum= In Forum:
+select_forum=- Select Forum -
+move_showing=showing
+move_of=of
+move_topics=topics
+move_cancel=Cancel
+move_move=Move Thread(s) to Selected Topic
+move_thread=Move Thread(s)
 move_thread_info1= The following conversation(s) will be moved from
 move_thread_info2= to the topic selected below.
 leave_reminder=Leave reminder about the move in the old topic
@@ -791,7 +798,7 @@ of=of
 move_button_text=Move Conversation(s) to Selected Topic
 locked_topics_hidden=Locked topics will not show up as available options
 hasBeen=has been
-moved=moved
+moved=moved to
 anotherTopic=to another topic.
 
 ranks=Ranks
