--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -687,7 +687,7 @@ close_window=Cerrar ventana
 ## Configuration properties should _not_ be mixed in with localization properties
 ## (the following should not be translated and ultimately moved into separate file)
 ##
-syn_tool_link_begin=<a href\="\#" onclick\="javascript\:window.parent.location.href\=''
+syn_tool_link_begin=<a href\="\#" onclick\="javascript\:window.parent.location.href\='
 longPageLoad=synMain
 longPageLoadLite=synMainLite
 viewSynopticInfo=Mostrar mis mensajes nuevos y mis publicaciones en el foro
